fixed letter-spacing and margin in about

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ h1 {
 }
 
 h3 {
-  margin: 2vw;
-  letter-spacing: 0.7vw;
+  margin-right: 3vw;
+  margin-left: 3vw;
   font-size: 3.6vw;
 }
 
@@ -61,7 +61,6 @@ a {
 
 figcaption {
   font-weight: 200;
-  letter-spacing: 0.3vw;
   margin-top: 2vw;
   font-size: 2.5vw;
 }
@@ -81,10 +80,16 @@ h2 {
 }
 
 p {
-  margin: 4vw 2vw;
   font-weight: 500;
-  letter-spacing: 1vw;
-  padding: 2vw 3vw;
+}
+
+.about_p {
+  margin-left: 4vw;
+  margin-right: 4vw;
+  letter-spacing: 0.5rem;
+  padding-top: 5vw;
+  padding-left: 2vw;
+  padding-right: 2vw;
   font-size: 3.3vw;
 }
 
@@ -93,6 +98,10 @@ p {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.about_figure_img {
+  margin-bottom: 6vw;
 }
 
 /* Projects */
@@ -116,7 +125,6 @@ p {
 
 .projects_p {
   font-weight: 200;
-  letter-spacing: 0.3rem;
   margin-top: 1vw;
   margin-bottom: 4vw;
   font-size: 2.5vw;
@@ -215,7 +223,7 @@ button:hover {
     align-items: center;
   }
 
-  input[type="radio"] {
+  input[type='radio'] {
     height: 7vw;
     width: 3vw;
   }
@@ -271,7 +279,6 @@ button:hover {
     margin: 0 4vw;
     /*FIX*/
     text-align: justify;
-    letter-spacing: 0.3vw;
     font-size: 1.8vw;
     width: 45%;
     float: right;
@@ -356,17 +363,17 @@ button:hover {
     margin: 1vw;
   }
 
-  input[type="text"] {
+  input[type='text'] {
     margin-top: 1vw;
     margin-bottom: 2vw;
   }
 
-  input[type="email"] {
+  input[type='email'] {
     margin-top: 1vw;
     margin-bottom: 2vw;
   }
 
-  input[type="radio"] {
+  input[type='radio'] {
     height: 4vw;
     width: 1.8vw;
   }
